--- a/Limpieza - Mexico.ipynb
+++ b/Limpieza - Mexico.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
        "[21669 rows x 17 columns]"
       ]
      },
-     "execution_count": 358,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
        "[21669 rows x 17 columns]"
       ]
      },
-     "execution_count": 359,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 360,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +909,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 373,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -1271,7 +1271,7 @@
        "[21669 rows x 17 columns]"
       ]
      },
-     "execution_count": 374,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -1315,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -1425,7 +1425,7 @@
        "21665                   17.0  "
       ]
      },
-     "execution_count": 376,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1438,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -1464,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -1598,7 +1598,7 @@
        "12009                    1.0  "
       ]
      },
-     "execution_count": 379,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -1637,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -1661,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -2871,7 +2871,7 @@
        "19099                            41.0             282.0                    0.0  "
       ]
      },
-     "execution_count": 382,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2884,7 +2884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -2910,7 +2910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -2934,7 +2934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -3272,7 +3272,7 @@
        "[176 rows x 17 columns]"
       ]
      },
-     "execution_count": 385,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3285,7 +3285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -3311,7 +3311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -3335,7 +3335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -3673,7 +3673,7 @@
        "[532 rows x 17 columns]"
       ]
      },
-     "execution_count": 388,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3686,7 +3686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -3712,7 +3712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -3736,7 +3736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -4075,7 +4075,7 @@
        "[223 rows x 17 columns]"
       ]
      },
-     "execution_count": 391,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4088,7 +4088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -4114,7 +4114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -4138,7 +4138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -4220,7 +4220,7 @@
        "15                             3.0            1290.0                    0.0  "
       ]
      },
-     "execution_count": 394,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4233,7 +4233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -4266,7 +4266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -4294,7 +4294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -4632,7 +4632,7 @@
        "[1132 rows x 17 columns]"
       ]
      },
-     "execution_count": 397,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4645,7 +4645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -4673,7 +4673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -5013,7 +5013,7 @@
        "[2700 rows x 17 columns]"
       ]
      },
-     "execution_count": 399,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5026,7 +5026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -5054,7 +5054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -5392,7 +5392,7 @@
        "[1511 rows x 17 columns]"
       ]
      },
-     "execution_count": 401,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5405,7 +5405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -5433,7 +5433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -5771,7 +5771,7 @@
        "[1679 rows x 17 columns]"
       ]
      },
-     "execution_count": 403,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5784,7 +5784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -5812,7 +5812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -6150,7 +6150,7 @@
        "[2281 rows x 17 columns]"
       ]
      },
-     "execution_count": 405,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6163,7 +6163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -6191,7 +6191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -6529,7 +6529,7 @@
        "[990 rows x 17 columns]"
       ]
      },
-     "execution_count": 407,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6542,7 +6542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -6570,7 +6570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -6652,7 +6652,7 @@
        "15                             3.0            1290.0                    0.0  "
       ]
      },
-     "execution_count": 409,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6672,14 +6672,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\aremy\\AppData\\Local\\Temp\\ipykernel_10368\\4233478953.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\aremy\\AppData\\Local\\Temp\\ipykernel_32568\\4233478953.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -6697,14 +6697,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\aremy\\AppData\\Local\\Temp\\ipykernel_10368\\3899938042.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\aremy\\AppData\\Local\\Temp\\ipykernel_32568\\3899938042.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -6722,14 +6722,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\aremy\\AppData\\Local\\Temp\\ipykernel_10368\\1568465726.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\aremy\\AppData\\Local\\Temp\\ipykernel_32568\\1568465726.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -6747,14 +6747,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\aremy\\AppData\\Local\\Temp\\ipykernel_10368\\1267522239.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\aremy\\AppData\\Local\\Temp\\ipykernel_32568\\1267522239.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -6779,12 +6779,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Convertir DataFrame limpio a CSV\n",
     "clean_airbnb=data3.copy()\n",
+    "clean_airbnb\n",
     "clean_airbnb.to_csv(\"clean_airbnb - Mexico.csv\")"
    ]
   },
@@ -6797,7 +6798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6808,7 +6809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6818,7 +6819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6828,7 +6829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
